# embassy_stm32f0_blink

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
